@@ -4,9 +4,10 @@ AC_CONFIG_AUX_DIR(config)
 
 dnl Initialize automake
 AM_INIT_AUTOMAKE(PhotoTool, 0.1)
+AM_CONFIG_HEADER(include/config.h)
 
 dnl Check for required programs
-#AC_PROG_INSTALL
+AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AC_PROG_CXX
 
@@ -43,6 +44,14 @@ if test "x$enable_debug" = "xyes"; then
     LDFLAGS="$LDFLAGS -g"
 fi
 
+dnl Testing
+AC_ARG_ENABLE(testing, [  --enable-testing Testing, run from build directory], 
+              enable_testing=$enableval, enable_testing=no)
+if test "x$enable_testing" = "xyes"; then
+    CXXFLAGS="$CXXFLAGS -DTESTING"
+    CPPFLAGS="$CPPFLAGS -DTESTING"
+fi
+
 dnl Doxygen documentation
 AC_ARG_ENABLE(docs,  [  --enable-docs           Generate doxygen documentation],
               enable_docs=$enableval, enable_docs=no)
@@ -55,6 +64,16 @@ if test "x$enable_docs" = "xyes"; then
     fi
 fi
 
+dnl Program data paths
+AC_MSG_CHECKING(for installation prefix)
+if test "x$prefix" = "xNONE"; then
+    prefix=$ac_default_prefix
+fi
+AC_MSG_RESULT($prefix)
+
+AC_DEFINE_UNQUOTED(PHOTOTOOL_PREFIX, _T("$prefix"), 
+                   [PhotoTool installation prefix])
+
 # Global options
 CPPFLAGS="$CPPFLAGS -Wall -W"
 CXXFLAGS="$CXXFLAGS -Wall -W"
@@ -63,8 +82,13 @@ dnl Makefiles to output
 AC_OUTPUT([
     Doxyfile
     Makefile
+
     include/Makefile
     include/wx/Makefile
+
     src/Makefile
+
+    plugins/Makefile
+    plugins/tester/Makefile
 ])
 
